--- a/public/index.html
+++ b/public/index.html
@@ -3,26 +3,123 @@
 <head>
   <meta charset="UTF-8">
   <title>企业随机抽取平台</title>
+  <style>
+    body {
+      font-family: "Microsoft YaHei", sans-serif;
+      background: #f7f9fc;
+      margin: 0;
+      padding: 0;
+    }
+    .container {
+      max-width: 700px;
+      margin: 40px auto;
+      background: #fff;
+      padding: 30px;
+      border-radius: 16px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.08);
+    }
+    h1 {
+      text-align: center;
+      color: #4f46e5;
+      margin-bottom: 20px;
+    }
+    h2 {
+      color: #374151;
+      margin-top: 20px;
+      margin-bottom: 12px;
+    }
+    form {
+      display: flex;
+      flex-direction: column;
+      gap: 12px;
+    }
+    input {
+      padding: 12px;
+      border: 1px solid #d1d5db;
+      border-radius: 10px;
+      font-size: 14px;
+      transition: border 0.3s, box-shadow 0.3s;
+    }
+    input:focus {
+      border-color: #6366f1;
+      box-shadow: 0 0 6px rgba(99,102,241,0.3);
+      outline: none;
+    }
+    button {
+      padding: 12px;
+      background: #4f46e5;
+      color: white;
+      border: none;
+      border-radius: 10px;
+      font-size: 15px;
+      font-weight: bold;
+      cursor: pointer;
+      transition: background 0.3s, transform 0.2s;
+    }
+    button:hover {
+      background: #4338ca;
+      transform: translateY(-1px);
+    }
+    #submitResult {
+      margin-top: 8px;
+      font-size: 14px;
+      color: green;
+    }
+    hr {
+      margin: 30px 0;
+      border: none;
+      border-top: 1px solid #e5e7eb;
+    }
+    #result {
+      margin-top: 20px;
+      padding: 20px;
+      border: 1px solid #e5e7eb;
+      border-radius: 12px;
+      background: #f9fafb;
+    }
+    #result h3 {
+      color: #4f46e5;
+      margin: 0 0 8px;
+    }
+    #result p {
+      color: #374151;
+      margin: 0 0 10px;
+    }
+    #result a {
+      display: inline-block;
+      padding: 8px 14px;
+      background: #10b981;
+      color: white;
+      border-radius: 8px;
+      text-decoration: none;
+      transition: background 0.3s;
+    }
+    #result a:hover {
+      background: #059669;
+    }
+  </style>
 </head>
 <body>
-  <h1>企业网址随机抽取平台</h1>
+  <div class="container">
+    <h1>企业网址随机抽取平台</h1>
 
-  <!-- 提交表单 -->
-  <h2>提交你的企业</h2>
-  <form id="submitForm">
-    <input type="text" id="name" placeholder="企业名称" required><br>
-    <input type="url" id="url" placeholder="企业网址 (http://...)" required><br>
-    <input type="text" id="industry" placeholder="行业 (可选)"><br>
-    <button type="submit">提交</button>
-  </form>
-  <p id="submitResult"></p>
+    <!-- 提交表单 -->
+    <h2>提交你的企业</h2>
+    <form id="submitForm">
+      <input type="text" id="name" placeholder="企业名称" required>
+      <input type="url" id="url" placeholder="企业网址 (http://...)" required>
+      <input type="text" id="industry" placeholder="行业 (可选)">
+      <button type="submit">提交企业</button>
+    </form>
+    <p id="submitResult"></p>
 
-  <hr>
+    <hr>
 
-  <!-- 抽取按钮 -->
-  <h2>随机抽取企业</h2>
-  <button id="randomBtn">抽一个企业</button>
-  <div id="result"></div>
+    <!-- 抽取按钮 -->
+    <h2>随机抽取企业</h2>
+    <button id="randomBtn">🎲 抽一个企业</button>
+    <div id="result"></div>
+  </div>
 
   <script>
     const API_BASE = "/api/companies"; // Vercel 会自动映射
