--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,7 @@
   <meta name="author" content="MYismyDear">
 
   <!-- Favicon -->
-  <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/3595/3595451.png" type="image/png">
-
+  <link rel="icon" type="image/png" href="/favicon.png">
 
   <style>
     body {
