--- a/public/index.html
+++ b/public/index.html
@@ -3,32 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <title>Company Randomizer</title>
-  <meta name="description" content="Submit your company and randomly discover other companies' websites">
-  <link rel="icon" href="/favicon.ico" type="image/x-icon">
   <style>
     body { font-family: "Microsoft YaHei", sans-serif; background:#f7f9fc; margin:0; padding:0; }
     .container { max-width:700px; margin:40px auto; background:#fff; padding:30px; border-radius:16px; box-shadow:0 8px 20px rgba(0,0,0,0.08);}
     h1 { text-align:center; color:#4f46e5; margin-bottom:20px; }
-    h2 { color:#374151; margin-top:20px; margin-bottom:12px; }
     form { display:flex; flex-direction:column; gap:12px; }
-    input { padding:12px; border:1px solid #d1d5db; border-radius:10px; font-size:14px; transition:border 0.3s, box-shadow 0.3s; }
-    input:focus { border-color:#6366f1; box-shadow:0 0 6px rgba(99,102,241,0.3); outline:none; }
-    button { padding:12px; background:#4f46e5; color:white; border:none; border-radius:10px; font-size:15px; font-weight:bold; cursor:pointer; transition:background 0.3s, transform 0.2s; }
-    button:hover { background:#4338ca; transform:translateY(-1px); }
+    input { padding:12px; border:1px solid #d1d5db; border-radius:10px; font-size:14px; }
+    button { padding:12px; background:#4f46e5; color:white; border:none; border-radius:10px; font-size:15px; cursor:pointer; }
     #submitResult { margin-top:8px; font-size:14px; color:green; }
-    hr { margin:30px 0; border:none; border-top:1px solid #e5e7eb; }
-    #result { margin-top:20px; padding:20px; border:1px solid #e5e7eb; border-radius:12px; background:#f9fafb; }
-    #result h3 { color:#4f46e5; margin:0 0 8px; }
-    #result p { color:#374151; margin:0 0 10px; }
-    #result a { display:inline-block; padding:8px 14px; background:#10b981; color:white; border-radius:8px; text-decoration:none; transition:background 0.3s; }
-    #result a:hover { background:#059669; }
   </style>
 </head>
 <body>
   <div class="container">
     <h1>Company Randomizer</h1>
 
-    <!-- Submit Form -->
     <h2>Submit Your Company</h2>
     <form id="submitForm">
       <input type="text" id="name" placeholder="Company Name" required>
@@ -40,53 +28,59 @@
 
     <hr>
 
-    <!-- Random Pick -->
     <h2>Randomly Pick a Company</h2>
     <button id="randomBtn">🎲 Pick a Company</button>
     <div id="result"></div>
   </div>
 
   <script>
-    const API_BASE = "/api/companies"; // Vercel API route
+    const API_BASE = "/api/companies";
 
-    // Submit company
-    document.getElementById("submitForm").addEventListener("submit", async (e) => {
+    const form = document.getElementById("submitForm");
+    const submitResult = document.getElementById("submitResult");
+
+    form.addEventListener("submit", async (e) => {
       e.preventDefault();
 
       const name = document.getElementById("name").value;
       const url = document.getElementById("url").value;
       const industry = document.getElementById("industry").value;
 
-      const res = await fetch(API_BASE, {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ name, url, industry })
-      });
+      try {
+        const res = await fetch(API_BASE, {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({ name, url, industry })
+        });
 
-      const data = await res.json();
+        const data = await res.json();
 
-      // Show success or error message
-      document.getElementById("submitResult").innerText = res.ok 
-        ? "Submitted successfully!" 
-        : data.message;
-
-      // Clear form on success
-      if (res.ok) document.getElementById("submitForm").reset();
+        if (res.ok) {
+          // ✅ 清空表单
+          form.reset();
+          // ✅ 显示成功提示
+          submitResult.innerText = "Submitted successfully!";
+        } else {
+          submitResult.innerText = data.message || "Submission failed!";
+        }
+      } catch (err) {
+        submitResult.innerText = "Error submitting the company!";
+      }
     });
 
-    // Randomly pick company
     document.getElementById("randomBtn").addEventListener("click", async () => {
       const res = await fetch(API_BASE);
       const data = await res.json();
 
+      const resultDiv = document.getElementById("result");
       if (data.url) {
-        document.getElementById("result").innerHTML = `
+        resultDiv.innerHTML = `
           <h3>${data.name}</h3>
           <p>Industry: ${data.industry || "Not specified"}</p>
           <a href="${data.url}" target="_blank">Visit Website</a>
         `;
       } else {
-        document.getElementById("result").innerText = data.message;
+        resultDiv.innerText = data.message;
       }
     });
   </script>
