--- a/public/index.html
+++ b/public/index.html
@@ -4,85 +4,98 @@
   <meta charset="UTF-8">
   <title>Company Randomizer</title>
   <style>
-    body { font-family: "Microsoft YaHei", sans-serif; background:#f7f9fc; margin:0; padding:0; }
+    body { font-family:"Microsoft YaHei", sans-serif; background:#f7f9fc; margin:0; padding:0; }
     .container { max-width:700px; margin:40px auto; background:#fff; padding:30px; border-radius:16px; box-shadow:0 8px 20px rgba(0,0,0,0.08);}
     h1 { text-align:center; color:#4f46e5; margin-bottom:20px; }
     form { display:flex; flex-direction:column; gap:12px; }
     input { padding:12px; border:1px solid #d1d5db; border-radius:10px; font-size:14px; }
     button { padding:12px; background:#4f46e5; color:white; border:none; border-radius:10px; font-size:15px; cursor:pointer; }
-    #submitResult { margin-top:8px; font-size:14px; color:green; }
+    #submitResult {
+      margin-top:12px; 
+      padding:10px; 
+      border-radius:8px; 
+      color:#065f46; 
+      background:#d1fae5; 
+      font-weight:bold; 
+      display:none; 
+      transition: opacity 0.5s ease;
+    }
+    #submitResult.show { display:block; opacity:1; }
+    #result { margin-top:20px; padding:20px; border:1px solid #e5e7eb; border-radius:12px; background:#f9fafb; }
+    #result a { display:inline-block; padding:8px 14px; background:#10b981; color:white; border-radius:8px; text-decoration:none; transition:background 0.3s; }
+    #result a:hover { background:#059669; }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>Company Randomizer</h1>
+<div class="container">
+  <h1>Company Randomizer</h1>
 
-    <h2>Submit Your Company</h2>
-    <form id="submitForm">
-      <input type="text" id="name" placeholder="Company Name" required>
-      <input type="url" id="url" placeholder="Company Website (http://...)" required>
-      <input type="text" id="industry" placeholder="Industry (Optional)">
-      <button type="submit">Submit</button>
-    </form>
-    <p id="submitResult"></p>
+  <h2>Submit Your Company</h2>
+  <form id="submitForm">
+    <input type="text" id="name" placeholder="Company Name" required>
+    <input type="url" id="url" placeholder="Company Website (http://...)" required>
+    <input type="text" id="industry" placeholder="Industry (Optional)">
+    <button type="submit">Submit</button>
+  </form>
+  <div id="submitResult">Submitted successfully!</div>
 
-    <hr>
+  <hr>
 
-    <h2>Randomly Pick a Company</h2>
-    <button id="randomBtn">🎲 Pick a Company</button>
-    <div id="result"></div>
-  </div>
+  <h2>Randomly Pick a Company</h2>
+  <button id="randomBtn">🎲 Pick a Company</button>
+  <div id="result"></div>
+</div>
 
-  <script>
-    const API_BASE = "/api/companies";
+<script>
+const API_BASE = "/api/companies";
+const form = document.getElementById("submitForm");
+const submitResult = document.getElementById("submitResult");
 
-    const form = document.getElementById("submitForm");
-    const submitResult = document.getElementById("submitResult");
+form.addEventListener("submit", async (e) => {
+  e.preventDefault();
 
-    form.addEventListener("submit", async (e) => {
-      e.preventDefault();
+  const name = document.getElementById("name").value;
+  const url = document.getElementById("url").value;
+  const industry = document.getElementById("industry").value;
 
-      const name = document.getElementById("name").value;
-      const url = document.getElementById("url").value;
-      const industry = document.getElementById("industry").value;
-
-      try {
-        const res = await fetch(API_BASE, {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({ name, url, industry })
-        });
-
-        const data = await res.json();
-
-        if (res.ok) {
-          // ✅ 清空表单
-          form.reset();
-          // ✅ 显示成功提示
-          submitResult.innerText = "Submitted successfully!";
-        } else {
-          submitResult.innerText = data.message || "Submission failed!";
-        }
-      } catch (err) {
-        submitResult.innerText = "Error submitting the company!";
-      }
+  try {
+    const res = await fetch(API_BASE, {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({ name, url, industry })
     });
+    const data = await res.json();
 
-    document.getElementById("randomBtn").addEventListener("click", async () => {
-      const res = await fetch(API_BASE);
-      const data = await res.json();
+    if (res.ok) {
+      form.reset();
+      // 显示成功提示
+      submitResult.classList.add("show");
+      // 3秒后淡出
+      setTimeout(() => submitResult.classList.remove("show"), 3000);
+    } else {
+      submitResult.innerText = data.message || "Submission failed!";
+      submitResult.classList.add("show");
+    }
+  } catch (err) {
+    submitResult.innerText = "Error submitting the company!";
+    submitResult.classList.add("show");
+  }
+});
 
-      const resultDiv = document.getElementById("result");
-      if (data.url) {
-        resultDiv.innerHTML = `
-          <h3>${data.name}</h3>
-          <p>Industry: ${data.industry || "Not specified"}</p>
-          <a href="${data.url}" target="_blank">Visit Website</a>
-        `;
-      } else {
-        resultDiv.innerText = data.message;
-      }
-    });
-  </script>
+document.getElementById("randomBtn").addEventListener("click", async () => {
+  const res = await fetch(API_BASE);
+  const data = await res.json();
+  const resultDiv = document.getElementById("result");
+  if (data.url) {
+    resultDiv.innerHTML = `
+      <h3>${data.name}</h3>
+      <p>Industry: ${data.industry || "Not specified"}</p>
+      <a href="${data.url}" target="_blank">Visit Website</a>
+    `;
+  } else {
+    resultDiv.innerText = data.message;
+  }
+});
+</script>
 </body>
 </html>
