--- a/public/index.html
+++ b/public/index.html
@@ -64,13 +64,13 @@ form.addEventListener("submit", async (e) => {
       headers: { "Content-Type": "application/json" },
       body: JSON.stringify({ name, url, industry })
     });
+
     const data = await res.json();
 
     if (res.ok) {
       form.reset();
-      // 显示成功提示
+      submitResult.innerText = "Submitted successfully!";
       submitResult.classList.add("show");
-      // 3秒后淡出
       setTimeout(() => submitResult.classList.remove("show"), 3000);
     } else {
       submitResult.innerText = data.message || "Submission failed!";
@@ -86,6 +86,7 @@ document.getElementById("randomBtn").addEventListener("click", async () => {
   const res = await fetch(API_BASE);
   const data = await res.json();
   const resultDiv = document.getElementById("result");
+
   if (data.url) {
     resultDiv.innerHTML = `
       <h3>${data.name}</h3>
