--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     body { font-family:"Microsoft YaHei", sans-serif; background:#f7f9fc; margin:0; padding:0; }
     .container { max-width:700px; margin:40px auto; background:#fff; padding:30px; border-radius:16px; box-shadow:0 8px 20px rgba(0,0,0,0.08);}
     h1 { text-align:center; color:#4f46e5; margin-bottom:20px; }
+    h2 { color:#374151; margin-top:20px; margin-bottom:12px; }
     form { display:flex; flex-direction:column; gap:12px; }
     input { padding:12px; border:1px solid #d1d5db; border-radius:10px; font-size:14px; }
     button { padding:12px; background:#4f46e5; color:white; border:none; border-radius:10px; font-size:15px; cursor:pointer; }
@@ -22,6 +23,8 @@
     }
     #submitResult.show { display:block; opacity:1; }
     #result { margin-top:20px; padding:20px; border:1px solid #e5e7eb; border-radius:12px; background:#f9fafb; }
+    #result h3 { color:#4f46e5; margin:0 0 8px; }
+    #result p { color:#374151; margin:0 0 10px; }
     #result a { display:inline-block; padding:8px 14px; background:#10b981; color:white; border-radius:8px; text-decoration:none; transition:background 0.3s; }
     #result a:hover { background:#059669; }
   </style>
@@ -51,9 +54,9 @@ const API_BASE = "/api/companies";
 const form = document.getElementById("submitForm");
 const submitResult = document.getElementById("submitResult");
 
+// Handle company submission
 form.addEventListener("submit", async (e) => {
   e.preventDefault();
-
   const name = document.getElementById("name").value;
   const url = document.getElementById("url").value;
   const industry = document.getElementById("industry").value;
@@ -64,7 +67,6 @@ form.addEventListener("submit", async (e) => {
       headers: { "Content-Type": "application/json" },
       body: JSON.stringify({ name, url, industry })
     });
-
     const data = await res.json();
 
     if (res.ok) {
@@ -82,6 +84,7 @@ form.addEventListener("submit", async (e) => {
   }
 });
 
+// Handle random pick
 document.getElementById("randomBtn").addEventListener("click", async () => {
   const res = await fetch(API_BASE);
   const data = await res.json();
