--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Company Randomizer.io</title>
+  <link rel="icon" type="image/png" href="https://pluspng.com/img-png/png-mexican-hat-mexican-hat-pictures-900.png">
   <style>
     body { font-family:"Microsoft YaHei", sans-serif; background:#f7f9fc; margin:0; padding:0; }
     .container { max-width:700px; margin:40px auto; background:#fff; padding:30px; border-radius:16px; box-shadow:0 8px 20px rgba(0,0,0,0.08);}
@@ -103,4 +104,5 @@ document.getElementById("randomBtn").addEventListener("click", async () => {
 </script>
 </body>
 </html>
+
 
