--- a/public/index.html
+++ b/public/index.html
@@ -5,14 +5,23 @@
   <title>Company Randomizer.io</title>
   <link rel="icon" type="image/png" href="https://pluspng.com/img-png/png-mexican-hat-mexican-hat-pictures-900.png">
   <meta name="google-site-verification" content="YDOvaDGdloHFeugCoRLCrxxI48S46fOPHwIMqkTEb_8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body { font-family:"Microsoft YaHei", sans-serif; background:#f7f9fc; margin:0; padding:0; }
-    .container { max-width:700px; margin:40px auto; background:#fff; padding:30px; border-radius:16px; box-shadow:0 8px 20px rgba(0,0,0,0.08);}
+    .container { 
+      max-width:700px; 
+      margin:40px auto; 
+      background:#fff; 
+      padding:30px; 
+      border-radius:16px; 
+      box-shadow:0 8px 20px rgba(0,0,0,0.08);
+      box-sizing:border-box;
+    }
     h1 { text-align:center; color:#4f46e5; margin-bottom:20px; }
     h2 { color:#374151; margin-top:20px; margin-bottom:12px; }
     form { display:flex; flex-direction:column; gap:12px; }
-    input { padding:12px; border:1px solid #d1d5db; border-radius:10px; font-size:14px; }
-    button { padding:12px; background:#4f46e5; color:white; border:none; border-radius:10px; font-size:15px; cursor:pointer; }
+    input { padding:12px; border:1px solid #d1d5db; border-radius:10px; font-size:14px; width:100%; box-sizing:border-box; }
+    button { padding:12px; background:#4f46e5; color:white; border:none; border-radius:10px; font-size:15px; cursor:pointer; width:100%; box-sizing:border-box; }
     #submitResult {
       margin-top:12px; 
       padding:10px; 
@@ -29,6 +38,16 @@
     #result p { color:#374151; margin:0 0 10px; }
     #result a { display:inline-block; padding:8px 14px; background:#10b981; color:white; border-radius:8px; text-decoration:none; transition:background 0.3s; }
     #result a:hover { background:#059669; }
+
+    
+    @media (max-width:480px) {
+      .container { margin:20px 10px; padding:20px; }
+      h1 { font-size:1.5rem; }
+      h2 { font-size:1.1rem; }
+      input, button { font-size:16px; padding:14px; }
+      #result { padding:15px; }
+      #result a { padding:10px 12px; font-size:14px; }
+    }
   </style>
 </head>
 <body>
@@ -46,8 +65,8 @@
 
   <hr>
 
-  <h2>Randomly Pick a Company</h2>
-  <button id="randomBtn">🎲 Pick a Company</button>
+  <h2>Randomly Find a Company</h2>
+  <button id="randomBtn">🎲 Find a Company</button>
   <div id="result"></div>
 </div>
 
@@ -88,23 +107,26 @@ form.addEventListener("submit", async (e) => {
 
 // Handle random pick
 document.getElementById("randomBtn").addEventListener("click", async () => {
-  const res = await fetch(API_BASE);
-  const data = await res.json();
   const resultDiv = document.getElementById("result");
+  resultDiv.innerHTML = "<p>Loading...</p>"; 
 
-  if (data.url) {
-    resultDiv.innerHTML = `
-      <h3>${data.name}</h3>
-      <p>Industry: ${data.industry || "Not specified"}</p>
-      <a href="${data.url}" target="_blank">Visit Website</a>
-    `;
-  } else {
-    resultDiv.innerText = data.message;
+  try {
+    const res = await fetch(API_BASE);
+    const data = await res.json();
+
+    if (data.url) {
+      resultDiv.innerHTML = `
+        <h3>${data.name}</h3>
+        <p>Industry: ${data.industry || "Not specified"}</p>
+        <a href="${data.url}" target="_blank">Visit Website</a>
+      `;
+    } else {
+      resultDiv.innerText = data.message || "No company found.";
+    }
+  } catch (err) {
+    resultDiv.innerText = "Error fetching company!";
   }
 });
 </script>
 </body>
 </html>
-
-
-
