--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
     form { display:flex; flex-direction:column; gap:12px; }
     input { padding:12px; border:1px solid #d1d5db; border-radius:10px; font-size:14px; width:100%; box-sizing:border-box; }
     button { padding:12px; background:#4f46e5; color:white; border:none; border-radius:10px; font-size:15px; cursor:pointer; width:100%; box-sizing:border-box; }
+    button:disabled { background:#9ca3af; cursor:not-allowed; }
     #submitResult {
       margin-top:12px; 
       padding:10px; 
@@ -39,7 +40,6 @@
     #result a { display:inline-block; padding:8px 14px; background:#10b981; color:white; border-radius:8px; text-decoration:none; transition:background 0.3s; }
     #result a:hover { background:#059669; }
 
-    
     @media (max-width:480px) {
       .container { margin:20px 10px; padding:20px; }
       h1 { font-size:1.5rem; }
@@ -59,7 +59,7 @@
     <input type="text" id="name" placeholder="Company Name" required>
     <input type="url" id="url" placeholder="Company Website (http://...)" required>
     <input type="text" id="industry" placeholder="Industry (Optional)">
-    <button type="submit">Submit</button>
+    <button type="submit" id="submitBtn">Submit</button>
   </form>
   <div id="submitResult">Submitted successfully!</div>
 
@@ -73,6 +73,7 @@
 <script>
 const API_BASE = "/api/companies";
 const form = document.getElementById("submitForm");
+const submitBtn = document.getElementById("submitBtn");
 const submitResult = document.getElementById("submitResult");
 
 // Handle company submission
@@ -82,26 +83,37 @@ form.addEventListener("submit", async (e) => {
   const url = document.getElementById("url").value;
   const industry = document.getElementById("industry").value;
 
+  submitBtn.disabled = true;
+  submitBtn.innerText = "Submitting...";
+
   try {
     const res = await fetch(API_BASE, {
       method: "POST",
       headers: { "Content-Type": "application/json" },
       body: JSON.stringify({ name, url, industry })
     });
-    const data = await res.json();
+
+    let data = {};
+    try {
+      data = await res.json();
+    } catch {}
 
     if (res.ok) {
-      form.reset();
+      form.reset(); // ✅ 成功时清空
       submitResult.innerText = "Submitted successfully!";
-      submitResult.classList.add("show");
-      setTimeout(() => submitResult.classList.remove("show"), 3000);
     } else {
       submitResult.innerText = data.message || "Submission failed!";
-      submitResult.classList.add("show");
     }
+
+    submitResult.classList.add("show");
+    setTimeout(() => submitResult.classList.remove("show"), 3000);
+
   } catch (err) {
     submitResult.innerText = "Error submitting the company!";
     submitResult.classList.add("show");
+  } finally {
+    submitBtn.disabled = false;
+    submitBtn.innerText = "Submit";
   }
 });
 
