--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <title>Company Randomizer.io</title>
-  <link rel="icon" type="image/png" href="https://pluspng.com/img-png/png-mexican-hat-mexican-hat-pictures-900.png">
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon_io/favicon-16x16.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon_io/favicon-32x32.png">
+
+  <!-- Apple Touch Icon -->
+  <link rel="apple-touch-icon" sizes="180x180" href="/favicon_io/apple-touch-icon.png">
+
+  <!-- Android Chrome -->
+  <link rel="icon" type="image/png" sizes="192x192" href="/favicon_io/android-chrome-192x192.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="/favicon_io/android-chrome-512x512.png">
+
   <meta name="google-site-verification" content="YDOvaDGdloHFeugCoRLCrxxI48S46fOPHwIMqkTEb_8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
@@ -142,3 +152,4 @@ document.getElementById("randomBtn").addEventListener("click", async () => {
 </script>
 </body>
 </html>
+
